Validate Java 25 as a fourth supported target JDK for cert-agent
JDK 25 needed a real fix rather than just validation: ASM 9.7 couldn't
parse Java 25's own classfile major version (69), silently failing the
KeyStore retransform while still printing "[cert-agent] Initialized".
Fixed by bumping bundled ASM to 9.10.1.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>